Customize pagination and searchHit object